--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/lightbox.min.css" />
-    <link rel="stylesheet" href="/dist/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Welcome To EdgeLedger</title>
   </head>
   <body id="home">
