Fix Stylesheets Links for Post & Blog pages

--- a/post.html
+++ b/post.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/2a06d0cd58.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/dist/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Post One</title>
   </head>
   <body id="home">
